# medrect

./: .env.example  .gitignore  README.md  pyproject.toml
configs/batch/: README.md  medrect_en_all.yaml  medrect_ja_all.yaml
configs/batch/reassign_error_types_to_medrect-en/: medec_error_type_reassignment.yaml
configs/batch/screening_medrect/: medrect_en_screening.yaml  medrect_ja_screening.yaml
configs/batch/synthesize_medrect-ja_from_jmle/: synthesis_from_jmle.yaml
configs/batch/synthesize_reasoning_for_medrect-train/: medrect_en_train.yaml  medrect_ja_train.yaml
configs/models/: README.md  azure_openai.yaml  openai.yaml  vllm.yaml  vllm_lora.yaml
configs/tasks/: README.md  jmle.yaml  medec.yaml  medec_error_type.yaml  medec_screening.yaml
data/jmle/: jmle-2018-2025-source-questions.json
data/medec/: medec-test.json
data/medrect/: medrect-en-accepted.json  medrect-en-rejected.json  medrect-ja-step2-filtered.json  medrect-ja-step3-deduplicated.json  medrect-ja-step4-rejected.json
scripts/dataset_construction/: README.md  step1_convert_synthesis.py  step2_quality_filtering.py  step3_model_deduplication.py  step4_final_screening.py
scripts/training_data/: README.md  clean_reasoning_en.py  clean_reasoning_ja.py  extract_correct_samples.py
src/llm_eval/: component_factory.py  exec_evaluation.py  exec_inference.py  load_config.py  load_sample.py  run_batch.py  run_batch_with_retry.py
src/llm_eval/data/: base.py
src/llm_eval/metrics/: base.py
src/llm_eval/models/: azure_openai.py  base.py  (+3 more)
src/viewer/: app.py  config_loader.py  task_registry.py
(+42 files in other folders)
